Added basic working map

--- a/TagConnect-frontend/app.json
+++ b/TagConnect-frontend/app.json
@@ -15,12 +15,18 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "googleMapsApiKey": "AIzaSyAVwrwExXjhg8uDDpyggP8l6tDwl9uodNc"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "config": {
+        "googleMapsApiKey": "AIzaSyAVwrwExXjhg8uDDpyggP8l6tDwl9uodNc"
       }
     },
     "web": {
